# OpenGLEngine

./: .gitignore  CMakeLists.txt  main_glew_sfml.cpp  test_glew_sfml.cpp  testl.cpp
libs_project/: Camera.hpp  LightSource.hpp  Material.hpp  Matrix.hpp  Objects.h  Objects.hpp  Point.hpp  Sphere.cpp  Sphere.h  Texture.hpp  VAOObject.hpp  VBOObject.hpp  Vector.hpp
res/shaders/: defShader.fs
test_debug_project/: catch.hpp  tests_matrix.cpp  tests_vector.cpp
testing_debugging_project/: catch.hpp  tests_matrix.cpp  tests_vector.cpp
utils/: LightningShaderFiller.hpp  Shader.hpp  shaderLoader.cpp  shaderLoader.hpp
